# d3hack

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.cmake.template  config.mk  d3hack-nx.json  exlaunch.sh
cmake/: ConfigMk.cmake  Iwyu.cmake  SwitchTools.cmake  as_rtld.specs.template  module.specs.template  toolchain.cmake
data/: strings_de.toml  strings_en.toml  strings_es.toml  strings_fr.toml  strings_it.toml  strings_ja.toml  strings_ko.toml  strings_meta.toml  strings_zh.toml
examples/config/d3hack-nx/: config.toml
examples/config/d3hack-nx/rift_data/: README.md
include/nvn/: nvn_CppFuncPtrBase.h
misc/: clangd_compat.hpp
misc/mk/: common.mk  deploy.mk
misc/scripts/: citron-post-key.sh  deploy-ftp.py  deploy-ryu.sh  deploy-sd.sh  deploy-yuzu.sh  post-build.sh  pre-build.sh  refresh-ts.sh  ryu-launch-log.sh  ryu-post-key.sh  ryu-screenshot.sh  ryu_enable_only_mod.py
scripts/: build_release_zip.sh  gen_build_git.py
source/: common.hpp  idadefs.h  rtld.hpp
source/lib/armv8/instructions/op100x/move_wide_immediate/: movk.hpp  movn.hpp  movz.hpp
source/lib/armv8/instructions/op100x/pc_rel_addressing/: adrp.hpp
source/lib/hook/: inline.hpp  replace.hpp
source/lib/hook/nx64/: inline_impl.hpp
source/lib/init/: crt0.s
source/lib/nx/: abort.h
source/lib/patch/: patcher_impl.hpp  random_access_patcher.hpp
source/lib/util/: modules.hpp  neon.hpp  stack_trace.hpp  type_traits.hpp
source/lib/util/sys/: mem_layout.hpp  module_info.hpp
source/nn/: hid.hpp  init.hpp  mem.hpp  oe.hpp  os.hpp
source/nn/fs/: fs_directories.hpp  fs_files.hpp  fs_mount.hpp
source/nn/os/: os_debug_api.hpp  os_debug_types.hpp  os_dying_message_api.hpp  os_user_exception_handler_api.hpp  os_user_exception_handler_common.hpp  os_user_exception_handler_types.hpp
source/nn/util/: bit_flag_set.hpp  util_snprintf.hpp
source/program/: .clang-format  .clang-tidy  boot_report.cpp  boot_report.hpp  build_git.hpp  build_info.hpp  build_stamp.cpp  build_stamp.hpp  config.cpp  config.hpp  config_schema.cpp  config_schema.hpp  exception_handler.cpp  exception_handler.hpp  fs_util.cpp  fs_util.hpp  hook_registry.cpp  hook_registry.hpp  include_hygiene.cpp  log_once.cpp  log_once.hpp  loggers.hpp  logging.cpp  logging.hpp  main.cpp  nn_init_allocator.cpp  nn_malloc.cpp  offsets.hpp  offsets_patch_only.inl  romfs_assets.cpp  romfs_assets.hpp  runtime_apply.cpp  runtime_apply.hpp  setting.hpp  sigma_malloc.cpp  symbols.cpp  system_allocator.hpp  tagnx.cpp  tagnx.hpp  version.hpp
source/program/d3/: _lobby.hpp  _util.hpp  _util_globals.cpp  gamebalance.hpp  messages.hpp  patches.cpp  patches.hpp  resolution_util.cpp  resolution_util.hpp  setting.hpp  setting_strings.cpp  util.cpp  util.hpp  util_globals.hpp  util_paths.hpp
source/program/d3/hooks/: debug.hpp  lobby.hpp  nvn.hpp  resolution.hpp  season_events.hpp  util.hpp
source/program/d3/types/: allocators.hpp  attributes.hpp  bd_memory.hpp  blizzard.hpp  blz_types.hpp  common.hpp  console_storage.hpp  containers.hpp  d3_account.hpp  d3_achievements.hpp  d3_challenge.hpp  d3_cs.hpp  d3_hero.hpp  d3_items.hpp  d3_leaderboard.hpp  d3_online_service.hpp  enums.hpp  error_manager.hpp  gfx.hpp  hexrays.hpp  maps.hpp  namespaces.hpp  online.hpp  online_service.hpp  onlinebd.hpp  protobuf.hpp  refstring.cpp  sno.hpp
source/program/gui2/: imgui_glyph_ranges.cpp  imgui_glyph_ranges.hpp  imgui_overlay.cpp  imgui_overlay.hpp  input_util.hpp
source/program/gui2/backend/: nvn_hooks.cpp  nvn_hooks.hpp
source/program/gui2/fonts/: font_loader.cpp  font_loader.hpp
source/program/gui2/input/: hid_block.cpp  hid_block.hpp
source/program/gui2/memory/: imgui_alloc.cpp  imgui_alloc.hpp
source/program/gui2/ui/: overlay.cpp  overlay.hpp  virtual_keyboard.cpp  virtual_keyboard.hpp  window.cpp  window.hpp
source/program/gui2/ui/windows/: config_window.cpp  config_window.hpp  notifications_window.cpp  notifications_window.hpp
source/program/symbols/: base.hpp  common.hpp  constructors.hpp  game.hpp  game.inc  hooks.hpp  hooks.inc  items.hpp  player_actor.hpp  player_actor.inc  refstring.hpp
tools/: import_challenge_dumps.py
tools/clang-include-fixer/: run-find-all-symbols.py
